# Vert

./: README.md  capacitor.config.json  index.html  main.js  package.json  patch.css  patch.js  script.js  style.css
.github/workflows/: build-apps.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
