[package]
name = "vert"
version = "1.1.0"
description = "VERT: Phim khong gioi han"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-close", "window-minimize", "window-maximize", "window-unmaximize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
